Speed up DICOM archive forwarding